fixed map page navbar overlapping elements

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -3,6 +3,10 @@
 $h-logo-edge-padding: 1rem;
 $navbar-height: 3rem;
 
+.edge-padding {
+    padding: $h-logo-edge-padding 0;
+}
+
 .rift-navbar-wrapper {
     position: fixed;
     top: 0;
@@ -141,6 +145,10 @@ $navbar-height: 3rem;
 
 @media only screen and (min-width: 60rem) {
     $h-logo-edge-padding: 0.1rem;
+
+    .edge-padding {
+        padding: 0;
+    }
 
     .hamburger-menu {
         display: none;
